fix spacing

--- a/my-app/style.scss
+++ b/my-app/style.scss
@@ -88,9 +88,10 @@ h1 {
   font-size: 1rem;
   font-weight: bolder;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 8em);
   grid-template-rows: 1fr 1fr;
   row-gap: 1.5em;
+  column-gap: 4em;
   justify-content: center;
   @media (max-width: 990px) {
     font-size: 0.9rem;
@@ -114,7 +115,7 @@ h1 {
   box-shadow: 0 10px $very-dark-blue-alt;
   overflow: hidden;
   @media (max-width: 550px) {
-    scale: 1.1;
+    scale: 1.2;
   }
   &::before,
   &::after {
